[DACAS] nouvelles form

--- a/doc/cours/workshop/20160201_DACAS1/main.tex
+++ b/doc/cours/workshop/20160201_DACAS1/main.tex
@@ -15,7 +15,7 @@
 
 
 \title{DACAS Workshop--Working Paper\\
- Urban scaling in the Past.
+ Urban scaling and past societies.
 }
 \author{Simon Carrignon \& Sergi Valverde}
 \date{}
@@ -25,20 +25,52 @@
 
 \section{Introduction}
 
-In this paper we present how researchers embraced the scaling law observed in biology to describe and characterise human cities.  We briefly explain why the analogy used to transpose those concept from Biology to Social Sciences seems appropriate despite some critics that we think don't handle. We then advocate for the need to put such study in a historical perspective and underline the central role of Archaeology, History and Evolutionary thinking while doing so.
+In this paper we present how some people studying and characterizing human cities and their development, are successfully using concepts and tools initially developed to study the scaling properties of biological organism and briefly explain why the analogy used to transpose those concept from Biology to Social Sciences is relevant despite some critics. We finally advocate that those study should be put in a historical perspective and that Archeology and History should play a central role if we want to achieve this and propose as a case study a research project in which this approach, coupled with simple model and simulation, could help us to understand the nature of the economy of the Roman Empire.
 
 
-\section*{Abstract}
-Scaling properties are one of most striking regularities found in Nature. It has been decades then, biologists have observed that the size of organisms is correlated with the rate of their metabolism, their speed and other  physiological measurement~\citep{bonner2011size}. Since, such relation has been widely studied. More recently, people started to observe similar regularities in human cities and that the size of human settlement is scaling in correlation with a wide range of socio-economical measures. \cite{batty2008thesizescaleandshapeofcities,bettencourt2007growthinnovationscalingandthepaceoflifeincities} have shown that the communication speed inside the cities, the unemployment rate among other socio-economics properties, are scaling in the same way than physiological properties scales with mass of organisms~. 
+\section{Scalings Properties of Cities}
+Scaling properties are one of the most striking regularities found in Nature. It has been decades then that biologists have observed that the size of organisms is correlated with the rate of their metabolism, their speed and other physiological measurement~\citep{schmidtnielsen1984scalingwhyisanimalsizesoimportant}. Since, more example have been shown and researcher have looked for the origin of such properties. Among the, \cite{west1999thefourthdimensionoflifefractalgeometryandallometricscalingoforganisms}
+have advanced that Natural Selection could play a leading role as it:
+\begin{quote}
+    `` tended to maximize both metabolic capacity, by maximizing the scaling of exchange surface areas, and internal efficiency, by minimizing the scaling of transport distances and times.'' 
+\end{quote}
 
-But some concerns have been raised, that doing the parallel between cities and biological organisms is not feasible. The physical limits of biological organisms are easy to define and it allows us to have precise physiological measure. The limits of cities are far more difficult to draw and that should prevent us to make any assumption on their scaling properties. 
+Thus, they propose Darwinian Evolution as one of the main reason for these particular design and that these ``[\ldots]design principles are independent of detailed dynamics and explicit models and should apply to  virtually all organisms''(\emph{ibid.})
 
-We argue that such critics apply also to evolutionary biology. If it seems easy to define what an individual is when one look at the organisms traditionally studied in evolutionary biology (bacterias, mice, human or bees), it is not so clear for an important part of other entities in the living world (the famous example of the quaking aspen and its 1000 trees that are only clones of one ``individual'', is one among others, cf \cite{bouchard2011darwinismwithoutpopulationsamoreinclusiveunderstandingofsotf}). Indeed, more recent work on organisms coming from different biological reigns have shown that the scaling properties of those different organisms \emph{are} different \citep{delong2010shiftsinmetabolicscalingproductionandefficiencyacrossmajorevolutionarytransitionsoflife}. This difference suggest that the scaling properties underline the major evolutionary transitions as described for example by \cite{maynardsmith1997major}. In turn it shows that if one want to integrate the studies of cities into an evolutionary framework, one as to go farther than a too restrictive Darwinian position and work with broader approaches that encompass wider types of evolutionary mechanisms acting on wider kind of individuals (as proposed for instance by : \cite{godfrey2009darwinian} or \cite{jablonka2014evolution}). 
+In parallel to those advances in biology, the idea that cities are living organisms and that they should be studied (and planned) with an evolutionary perspective is far from being a new  one (see for example: \cite{geddes1915citiesinevolution} and  \cite{batty2009theevolutionofcitiesgeddesabercrombieandthenewphysicalism} for a more detailed review on the history of this idea). It is then not surprising if soon the study of those scaling properties have been quickly extended to cities.
 
-On the other hand, \cite{hou2010energeticbasisofcoloniallivinginsocialinsects} have shown that one can detect some properties of economy of scale coming from social interaction in ant colonies. Simply said, they show that some scaling properties observed when the size of a colony grow seem to be possible thanks to the social interaction involved inside the colony. This nicely support the idea that using scaling effects to study socio-cultural systems is fruitful and that it can help us to understand the socio-economic relations and properties governing such system. At the same time it raises the question of why and how such properties emerge in those system. This could gives us new way to work on the question of the level of selection in biology~\citep{okasha2006evolution}.
+\cite{batty2008thesizescaleandshapeofcities,bettencourt2007growthinnovationscalingandthepaceoflifeincities} have discussed and analysed some of those properties. \cite{batty2008thesizescaleandshapeofcities} have looked to the relations between the size of cities and the size of the building in those cities as well as the relation between subspace within the cities and the rate of employment or the population employed within those subspaces.
+\cite{bettencourt2007growthinnovationscalingandthepaceoflifeincities} have studied of lot of different properties of different cities, such as the number of patent produced, the total employment, the number of gasoline station, the road surface or even the number of serious crimes. They have shown how every properties respond to different scaling regimes.  They argue that the different scaling regimes measured can help us understand the nature of the process that have led to the observed repartition. In other word, by measuring social, economical, infrastructural, cultural, technological attributes of cities, one can infer the kind of social, economical, cultural, technological processes driving the development of such attributes.
+
+Following those studies, \cite{bettencourt2010aunifiedtheoryofurbanliving} as \cite{batty2013theory}, have both urged for the creation of a theory of cities build on such observations.
+
+At another level, \cite{hou2010energeticbasisofcoloniallivinginsocialinsects} have shown how the study of such scaling properties can indeed unveil the nature of social interaction at some simple biological level, given again more credit to such approach.
+Studying ant colonies they illustrate how some scaling properties observed at the colony level are made possible thanks to the nature of the social interaction involved inside the colony.
+This nicely support the idea that using scaling effects to study socio-cultural systems is fruitful and that it can help us to understand the socio-economic relations and properties governing such system. 
 
 
-In this article we follow this path and push forward the idea that \cite{ortman2014theprehistoryofurbanscaling} are starting to explore : if one can study dynamics of nowadays cities using there scaling properties, one should be ``able to infer aggregate socio-economic properties of ancient societies from archaeological measures of settlement organization''. We propose here that the study of the correlation between socio-economic properties and size of cities from past societies could help us: (1) to characterize the economical and cultural dynamics that have allowed the emergence of such properties in the studied society and (2) gives us a framework to study the evolution of such properties across the ages and between different human societies. Does human societies have evolved following similar major transitions than the ones life faced during its evolution? What such cultural transition can learn us about the level at which evolution and selection are acting?  In this paper we propose approaches and methods build on the case study of cities of the Roman Empire to bring new arguments in those kind of studies and try to answer such questions.
+Nonetheless, in more recent studies \citep{arcaute2015constructingcitiesdeconstructingscalinglaws} some concerns have been raised that the way cities are defined is far more difficult than biological individuals , and that could prevent us to make any assumption on their scaling properties. 
+
+We argue that if such critics have to be seriously considered, they should not prevent us from working within the biological framework, but otherwise to push farther the analogy with evolutionary biology. Indeed, if it seems easy to define what an individual is when one look at the organisms traditionally studied in evolutionary biology (bacterias, mice, human or bees), it is not so clear for an important part of other entities in the living world (the famous example of the quaking aspen and its 1000 trees that are only clones of one ``individual'', is one among others, \emph{cf.}~\cite{bouchard2011darwinismwithoutpopulationsamoreinclusiveunderstandingofsotf}).
+Indeed, more recent work on organisms coming from different biological reigns have shown that the scaling properties of those different organisms \emph{are} different \citep{delong2010shiftsinmetabolicscalingproductionandefficiencyacrossmajorevolutionarytransitionsoflife}. This difference suggest that the scaling properties underline the major evolutionary transitions as described for example by \cite{maynardsmith1997major}. In turn it shows that if one want to integrate the studies of cities into an evolutionary framework, one as to go farther than a too restrictive Darwinian position and work with broader approaches that encompass wider types of evolutionary mechanisms acting on wider kind of individuals (as proposed for instance by : \cite{godfrey2009darwinian} or \cite{jablonka2014evolution}). 
+
+
+\section{Historical Perspective}
+
+Given the observation made that some socio-economical properties of a cities can be linked to demographic and infrastructure measurement, \cite{ortman2014theprehistoryofurbanscaling} have pushed forward the idea: if one can study dynamics of nowadays cities using there scaling properties, one should be ``able to infer aggregate socio-economic properties of ancient societies from archaeological measures of settlement organization''. 
+
+We  want to follow this line of research and we argue that while looking to the properties as urbanisation is about destructing. Only figged state of the cities and not a the dynamic of the process. Moreover it's impossible. So one SHOULD look to archaeological evidence. 
+
+We propose here that the study of the correlation between socio-economic properties and size of cities from past societies could help us: (1) to characterize the economical and cultural dynamics that have allowed the emergence of such properties in the studied society and (2) gives us a framework to study the evolution of such properties across the ages and between different human societies.
+
+
+
+At the same time we think that if the scaling properties can help you to characterize and compare the processes that originated the observation, the precise description of such process is difficile. Moreover when one want to characterise past process, such as ancient economy, from which few remains. To palliate this we propose that simple computer model, 
+
+
+We want to present a case study \cite{carrignon2015modellingthecoevolutionoftradeandcultureinpastsocieties} Scaling properies and scaling laws are the one that could be used to compare such model in order to validate or not, hyoppthese on the causes of the scaling properties
+
+As part of the EPNet project \citep{remesal2014epnet} we hope to fretfully apply this approach to better study and characterized the nature of the Roman Economy.
 
 
 \bibliographystyle{apalike}
